machinev2/machine_law/lib/machine_law_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/machine_law.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MachineLawBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MachineLawBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MachineLawBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  Result_t Evaluate(
    ffi.Pointer<ffi.Char> service,
    ffi.Pointer<ffi.Char> law,
    Params_t parameters,
    ffi.Pointer<ffi.Char> referenceDate,
    ffi.Pointer<ffi.Char> effectiveDate,
    Params_t overwriteInput,
    ffi.Pointer<ffi.Char> requestedOutput,
    int approved,
  ) {
    return _Evaluate(
      service,
      law,
      parameters,
      referenceDate,
      effectiveDate,
      overwriteInput,
      requestedOutput,
      approved,
    );
  }

  late final _EvaluatePtr =
      _lookup<
        ffi.NativeFunction<
          Result_t Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            Params_t,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            Params_t,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('Evaluate');
  late final _Evaluate =
      _EvaluatePtr.asFunction<
        Result_t Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          Params_t,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          Params_t,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int machineLawStandalone() {
    return _machineLawStandalone();
  }

  late final _machineLawStandalonePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('machineLawStandalone');
  late final _machineLawStandalone = _machineLawStandalonePtr
      .asFunction<int Function()>();

  void startMachineLawEngine() {
    return _startMachineLawEngine();
  }

  late final _startMachineLawEnginePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('startMachineLawEngine');
  late final _startMachineLawEngine = _startMachineLawEnginePtr
      .asFunction<void Function()>();

  void freeParams(Params_t params) {
    return _freeParams(params);
  }

  late final _freeParamsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Params_t)>>('freeParams');
  late final _freeParams = _freeParamsPtr.asFunction<void Function(Params_t)>();

  void freeRuleResult(Result_t result) {
    return _freeRuleResult(result);
  }

  late final _freeRuleResultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Result_t)>>(
        'freeRuleResult',
      );
  late final _freeRuleResult = _freeRuleResultPtr
      .asFunction<void Function(Result_t)>();
}

final class Params_t extends ffi.Struct {
  /// Define the structure for parameters
  @ffi.Int()
  external int numParams;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> paramNames;

  external ffi.Pointer<ffi.Pointer<ffi.Void>> paramValues;
}

final class Result_t extends ffi.Struct {
  @ffi.Int()
  external int resultCode;

  external ffi.Pointer<ffi.Char> resultMessage;
}
